--- a/config/7.12.0/pim/process-migration.yaml
+++ b/config/7.12.0/pim/process-migration.yaml
@@ -123,6 +123,7 @@ processMigration:
         annotations:
           description: "Route for Process Migration [[.RouteProtocol]] service."
       spec:
+        host: "[[.ProcessMigration.RouteHostname]]"
         to:
           kind: Service
           name: "[[.ApplicationName]]-process-migration"
